--- a/lang/english.lng
+++ b/lang/english.lng
@@ -35,6 +35,7 @@ STR_NAME_JNR_ED79	:DELETE ME!!!
 STR_NAME_JNR_EF57	:EF57 (electric)
 STR_NAME_JNR_EH10	:EH10 (electric)
 
+STR_NAME_JR_DF200	:DF200 (diesel)
 STR_NAME_JR_EF500	:EF500 (electric)
 STR_NAME_JR_ED500	:ED500 (electric)
 STR_NAME_JR_EH800	:EH800 (electric)
@@ -196,6 +197,9 @@ STR_REFIT_EF66_100	: EF66-100
 STR_REFIT_EF67		: EF67 Banker
 
 STR_REFIT_EF210_300	: EF210-300 Banker
+
+STR_REFIT_DF200_NEW		: JR Freight "Red Bear"
+STR_REFIT_DF200_SS		: JR Kyushu "Seven Stars"
 
 STR_REFIT_EH10		: EH10 Standard Black
 STR_REFIT_EH10_HS	: EH10 High Speed Brown {GOLD}(110km/h)
