Rework classic express electrics
New sprites for EF57, EF53, EF58

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -31,7 +31,7 @@ STR_NAME_JNR_ED62	:ED61 / ED62 (electric)
 STR_NAME_JNR_ED70	:ED70 (electric)
 STR_NAME_JNR_ED75	:ED75 / ED79 (electric)
 STR_NAME_JNR_ED76	:ED76 (electric)
-STR_NAME_JNR_ED79	:DELETE ME!!!
+STR_NAME_JNR_EF53	:EF53 / EF59 (electric)
 STR_NAME_JNR_EF57	:EF57 (electric)
 STR_NAME_JNR_EH10	:EH10 (electric)
 
@@ -123,11 +123,13 @@ STR_REFIT_FBLACK	: Black
 STR_REFIT_FGREEN	: Green
 STR_REFIT_FBLUE		: Blue
 
+STR_REFIT_JGR		: JGR Classic Brown
 STR_REFIT_RED		: JNR Standard Red
 STR_REFIT_BLUE		: JNR Standard Blue
 STR_REFIT_BLACK		: JNR Standard Black
 STR_REFIT_GREEN		: JNR Light Green
 STR_REFIT_TOKKYU	: JNR "Tokkyu" Blue
+STR_REFIT_JNR_LOGO	: JNR Large Logo
 STR_REFIT_JRF_RED	: JR Freight Red
 STR_REFIT_JRF_BLUE	: JR Freight Blue
 STR_REFIT_JRF_REFIT	: JR Freight Refurbished
@@ -192,11 +194,13 @@ STR_REFIT_EF81_450		: EF81-450 Modern Headlights
 STR_REFIT_EF30_STRIPE	: Stainless with Red Stripe
 
 
-STR_REFIT_EF66_100	: EF66-100 
+STR_REFIT_EF59			: EF59 Banker
 
-STR_REFIT_EF67		: EF67 Banker
+STR_REFIT_EF66_100		: EF66-100 
 
-STR_REFIT_EF210_300	: EF210-300 Banker
+STR_REFIT_EF67			: EF67 Banker
+
+STR_REFIT_EF210_300		: EF210-300 Banker
 
 STR_REFIT_DF200_NEW		: JR Freight "Red Bear"
 STR_REFIT_DF200_SS		: JR Kyushu "Seven Stars"
