--- a/lang/english.lng
+++ b/lang/english.lng
@@ -2,11 +2,11 @@
 
 lang: 7F
 
-STR_GRF_NAME :JP+ Engines & Wagons v0.10.1 InDev
+STR_GRF_NAME :JP+ Engines & Wagons v0.10.2 InDev
 STR_GRF_DESCRIPTION :An addon for Japan Set Trains, focused on locomotives and wagons. Includes many new locos and livery refits. Drawn by Emperor Jake, Voyager One, Doorslammer, wicket-303, Azusa257, andythenorth and the JapanSet Team. Coded by Emperor Jake, (c) 2021 GPLv2+.
 
 STR_PARAM_NAME_BASECOSTMODBUY	:Purchase costs
-STR_PARAM_DESC_BASECOSTMODBUY	:Ajdust vehicle purchase costs, to match Japan Set
+STR_PARAM_DESC_BASECOSTMODBUY	:Adjust vehicle purchase costs, to match Japan Set
 
 STR_PARAM_NAME_BASECOSTMODRUN	:Running costs
 STR_PARAM_DESC_BASECOSTMODRUN	:Adjust vehicle running costs, to match Japan Set
