--- a/lang/english.lng
+++ b/lang/english.lng
@@ -89,7 +89,9 @@ STR_NAME_TORA_5000		:TORA 5000 Open Wagon
 STR_NAME_TORA_90000		:TORA 90000 Open Wagon
 STR_NAME_TOKI_900		:TOKI 900 Open Wagon
 
-STR_NAME_SEKI_3000		:SEKI 3000 Hopper
+STR_NAME_SEKI_1			:SEKI 1 / Otese 9500 Hopper
+STR_NAME_SEKI_1000		:SEKI 1000 Covered Hopper
+STR_NAME_SEKI_3000		:SEKI 3000 / 6000 Hopper
 STR_NAME_HOKI_650		:HOKI 650 Covered Hopper
 STR_NAME_HOKI_1000		:HOKI 1000 Covered Hopper
 STR_NAME_HOKI_2200		:HOKI 2200 Covered Grain Hopper
@@ -124,6 +126,9 @@ STR_REFIT_FBROWN	: Brown
 STR_REFIT_FBLACK	: Black
 STR_REFIT_FGREEN	: Green
 STR_REFIT_FBLUE		: Blue
+STR_REFIT_FSTRIPE	: Yellow Stripe
+STR_REFIT_FOPEN		: Open
+STR_REFIT_FCOVER	: Covered
 
 STR_REFIT_JGR		: JGR Classic Brown
 STR_REFIT_RED		: JNR Standard Red
