--- a/lang/english.lng
+++ b/lang/english.lng
@@ -94,9 +94,10 @@ STR_NAME_SEKI_1000		:SEKI 1000 Covered Hopper
 STR_NAME_SEKI_3000		:SEKI 3000 / 6000 Hopper
 STR_NAME_HOKI_650		:HOKI 650 Covered Hopper
 STR_NAME_HOKI_1000		:HOKI 1000 Covered Hopper
-STR_NAME_HOKI_2200		:HOKI 2200 Covered Grain Hopper
-STR_NAME_HOKI_2500		:HOKI 2500 Hopper
-STR_NAME_HOKI_6900		:HOKI 6900 Covered Hopper
+STR_NAME_HOKI_2200		:HOKI 2200 Grain Hopper
+STR_NAME_HOKI_2500		:HOKI 2500 / 9500 Covered Hopper
+STR_NAME_HOKI_8300		:HOKI 8300 / 9300 Covered Hopper
+STR_NAME_HOKI_8500		:HOKI 8500 Hopper
 STR_NAME_HOKI_10000		:HOKI 10000 Hopper
 
 STR_NAME_TAKI_3000		:TAKI 3000 Tanker
@@ -129,6 +130,9 @@ STR_REFIT_FBLUE		: Blue
 STR_REFIT_FSTRIPE	: Yellow Stripe
 STR_REFIT_FOPEN		: Open
 STR_REFIT_FCOVER	: Covered
+STR_REFIT_FCREAM	: Cream
+STR_REFIT_FWHITE	: White
+STR_REFIT_FLOGO		: Logo
 
 STR_REFIT_JGR		: JGR Classic Brown
 STR_REFIT_RED		: JNR Standard Red
