--- a/lang/english.lng
+++ b/lang/english.lng
@@ -123,16 +123,18 @@ STR_TEXT_DEKI_400	:Operators: {GOLD}Meitetsu
 STR_REFIT_YEARDEP	: Year-Dependent
 STR_REFIT_CC		: Company Colour
 STR_REFIT_RANDOM	: Random
-STR_REFIT_FBROWN	: Brown
-STR_REFIT_FBLACK	: Black
-STR_REFIT_FGREEN	: Green
-STR_REFIT_FBLUE		: Blue
-STR_REFIT_FSTRIPE	: Yellow Stripe
-STR_REFIT_FOPEN		: Open
-STR_REFIT_FCOVER	: Covered
-STR_REFIT_FCREAM	: Cream
-STR_REFIT_FWHITE	: White
-STR_REFIT_FLOGO		: Logo
+
+STR_REFIT_FRANDOM	:, Random
+STR_REFIT_FBROWN	:, Brown
+STR_REFIT_FBLACK	:, Black
+STR_REFIT_FGREEN	:, Green
+STR_REFIT_FBLUE		:, Blue
+STR_REFIT_FSTRIPE	:, Yellow Stripe
+STR_REFIT_FOPEN		:, Open
+STR_REFIT_FCOVER	:, Covered
+STR_REFIT_FCREAM	:, Cream
+STR_REFIT_FWHITE	:, White
+STR_REFIT_FLOGO		:, Logo
 
 STR_REFIT_JGR		: JGR Classic Brown
 STR_REFIT_RED		: JNR Standard Red
