--- a/lang/english.lng
+++ b/lang/english.lng
@@ -73,7 +73,8 @@ STR_NAME_WAKI_5000		:WAKI 5000 Box Van
 STR_NAME_WAKI_10000		:WAKI 10000 Box Van
 STR_NAME_WAMU_50000		:WAMU 50000 Box Van
 STR_NAME_WAMU_80000		:WAMU 80000 Box Van
-STR_NAME_WA_1_ICE		:RE 1 Ice Box Van
+STR_NAME_KA_1			:KA 1 Livestock Van
+STR_NAME_RE_1			:RE 1 Refrigerated Van
 STR_NAME_RESA_10000		:RESA 10000 Refrigerated Van
 STR_NAME_REMU_5000		:REMU 5000 Refrigerated Van
 
@@ -89,6 +90,7 @@ STR_NAME_TORA_5000		:TORA 5000 Open Wagon
 STR_NAME_TORA_90000		:TORA 90000 Open Wagon
 STR_NAME_TOKI_900		:TOKI 900 Open Wagon
 
+STR_NAME_SE_1			:SE 1 Hopper
 STR_NAME_SEKI_1			:SEKI 1 / Otese 9500 Hopper
 STR_NAME_SEKI_1000		:SEKI 1000 Covered Hopper
 STR_NAME_SEKI_3000		:SEKI 3000 / 6000 Hopper
@@ -129,7 +131,7 @@ STR_REFIT_FBROWN	:, Brown
 STR_REFIT_FBLACK	:, Black
 STR_REFIT_FGREEN	:, Green
 STR_REFIT_FBLUE		:, Blue
-STR_REFIT_FSTRIPE	:, Yellow Stripe
+STR_REFIT_FSTRIPE	:, Stripe
 STR_REFIT_FOPEN		:, Open
 STR_REFIT_FCOVER	:, Covered
 STR_REFIT_FCREAM	:, Cream
