--- a/lang/english.lng
+++ b/lang/english.lng
@@ -23,6 +23,7 @@ STR_ERROR_JPPLUSSET			:Must be loaded after JP+ Set!
 
 
 STR_NAME_JGR_7100	:7100 1-C (steam)
+STR_NAME_JGR_860	:860 1-B-1 (steam)
 
 STR_NAME_JNR_DD54	:DD54 (diesel)
 STR_NAME_JNR_AB10	:AB10 (battery)
@@ -141,7 +142,9 @@ STR_REFIT_FCREAM	:, Cream
 STR_REFIT_FWHITE	:, White
 STR_REFIT_FLOGO		:, Logo
 
+STR_REFIT_HCC		: Hokkaido Coal Company
 STR_REFIT_JGR		: JGR Classic Brown
+STR_REFIT_JGR_BLACK	: JGR Standard Black
 STR_REFIT_RED		: JNR Standard Red
 STR_REFIT_BLUE		: JNR Standard Blue
 STR_REFIT_BLACK		: JNR Standard Black
