--- a/lang/english.lng
+++ b/lang/english.lng
@@ -2,7 +2,7 @@
 
 lang: 7F
 
-STR_GRF_NAME :JP+ Engines & Wagons v0.10.2 InDev
+STR_GRF_NAME :JP+ Engines & Wagons v0.10.3 InDev
 STR_GRF_DESCRIPTION :An addon for Japan Set Trains, focused on locomotives and wagons. Includes many new locos and livery refits. Drawn by Emperor Jake, Voyager One, Doorslammer, wicket-303, Azusa257, andythenorth and the JapanSet Team. Coded by Emperor Jake, (c) 2021 GPLv2+.
 
 STR_PARAM_NAME_BASECOSTMODBUY	:Purchase costs
@@ -25,6 +25,8 @@ STR_ERROR_JPPLUSSET			:Must be loaded after JP+ Set!
 STR_NAME_JGR_7100	:7100 1-C (steam)
 STR_NAME_JGR_860	:860 1-B-1 (steam)
 
+STR_NAME_JNR_DD13	:DD13 (diesel)
+STR_NAME_JNR_DD16	:DD16 (diesel)
 STR_NAME_JNR_DD54	:DD54 (diesel)
 STR_NAME_JNR_AB10	:AB10 (battery)
 STR_NAME_JNR_EB10	:EB10 (electric)
@@ -118,17 +120,17 @@ STR_NAME_YO_8000		:YO 8000 Brake Van
 
 
 
-STR_REFIT_YEARDEP	: Year-Dependent
-STR_REFIT_CC		: Company Colour
+STR_REFIT_YEARDEP	: {GREEN}Year-Dependent{BLACK}
+STR_REFIT_CC		: {GREEN}Company Colour{BLACK}
 STR_REFIT_RANDOM	: Random
 
 STR_REFIT_BROWN_OLD	    : {WHITE}JNR{BLACK} Standard Brown (Old Shape)
 STR_REFIT_BROWN_NEW	    : {WHITE}JNR{BLACK} Standard Brown (New Shape)
-STR_REFIT_RED_OLD	    : {WHITE}JNR{BLACK} Standard Red (Old Shape)
-STR_REFIT_RED_NEW	    : {WHITE}JNR{BLACK} Standard Red (New Shape)
-STR_REFIT_CC_OLD		: Company Colour (Old Shape)
-STR_REFIT_CC_NEW		: Company Colour (New Shape)
-STR_REFIT_CC_PROTOTYPE	: Company Colour (Prototype)
+STR_REFIT_RED_OLD	    : {WHITE}JNR{BLACK} Red (Old Shape)
+STR_REFIT_RED_NEW	    : {WHITE}JNR{BLACK} Red (New Shape)
+STR_REFIT_CC_OLD		: {GREEN}Company Colour{BLACK} (Old Shape)
+STR_REFIT_CC_NEW		: {GREEN}Company Colour{BLACK} (New Shape)
+STR_REFIT_CC_PROTOTYPE	: {GREEN}Company Colour{BLACK} (Prototype)
 
 STR_REFIT_FRANDOM	:, Random
 STR_REFIT_FBROWN	:, Brown
@@ -145,11 +147,14 @@ STR_REFIT_FLOGO		:, Logo
 STR_REFIT_HCC		: {WHITE}Hokkaido Coal Company{BLACK}
 STR_REFIT_SEIBU		: {WHITE}Seibu Railway{BLACK} Red/Cream
 
-STR_REFIT_JGR		: {WHITE}JGR{BLACK} Classic Brown
-STR_REFIT_JGR_BLACK	: {WHITE}JGR{BLACK} Standard Black
-STR_REFIT_RED		: {WHITE}JNR{BLACK} Standard Red
-STR_REFIT_BLUE		: {WHITE}JNR{BLACK} Standard Blue
-STR_REFIT_BLACK		: {WHITE}JNR{BLACK} Standard Black
+STR_REFIT_JGR		: {WHITE}JGR{BLACK} Brown
+STR_REFIT_JGR_BLACK	: {WHITE}JGR{BLACK} Black
+
+STR_REFIT_JNR_BROWN	    : {WHITE}JNR{BLACK} Brown
+STR_REFIT_JNR_YELLOW	: {WHITE}JNR{BLACK} Brown/Yellow
+STR_REFIT_RED		: {WHITE}JNR{BLACK} Red
+STR_REFIT_BLUE		: {WHITE}JNR{BLACK} Blue
+STR_REFIT_BLACK		: {WHITE}JNR{BLACK} Black
 STR_REFIT_GREEN		: {WHITE}JNR{BLACK} Light Green
 STR_REFIT_TOKKYU	: {WHITE}JNR{BLACK} Blue/Cream {GOLD}"Tokkyu"{BLACK}
 STR_REFIT_JNR_LOGO	: {WHITE}JNR{BLACK} Large Logo
@@ -169,7 +174,7 @@ STR_REFIT_EXP		: {WHITE}JR Freight{BLACK} Experimental
 STR_REFIT_PROTOTYPE	: {WHITE}JR Freight{BLACK} Prototype
 STR_REFIT_OLDRED	: {WHITE}JNR{BLACK} Classic Red
 STR_REFIT_OLDSTRIPE	: {WHITE}JNR{BLACK} Classic Red with Stripe
-STR_REFIT_JNR_BROWN	    : {WHITE}JNR{BLACK} Classic Brown
+
 STR_REFIT_RAINBOW		: {WHITE}JR East{BLACK} {GOLD}"Super Express Rainbow"{BLACK}
 STR_REFIT_TWILIGHT	: {WHITE}JR West{BLACK} {GOLD}"Twilight Express"{BLACK}
 STR_REFIT_STAINLESS	: {WHITE}JNR{BLACK} Stainless Steel
@@ -198,51 +203,54 @@ STR_REFIT_KANSAI_BROWN	: {WHITE}Kansai Freight Railway{BLACK} Brown/Red
 STR_REFIT_KANSAI_BLUE	: {WHITE}Kansai Freight Railway{BLACK} Blue/Yellow
 STR_REFIT_SAGANO		: {WHITE}Sagano Scenic Railway{BLACK} Black/Red
 
+STR_REFIT_ASAHIKAWA		: {WHITE}Asahikawa Express Railway{BLACK} Green/White
+STR_REFIT_AKITA_RINKAI	: {WHITE}Akita Rinkai Railway{BLACK} Blue/White
+STR_REFIT_TOMAKOMAI		: {WHITE}Tomakomai Port Development Line{BLACK} Pink/Green
+STR_REFIT_NAGOYA_RINKAI	: {WHITE}Nagoya Rinkai Railway{BLACK} Blue/White
+STR_REFIT_KOSAKA		: {WHITE}Kosaka Railway{BLACK} Red/Grey
+STR_REFIT_KAMIOKA		: {WHITE}Kamioka Railway{BLACK} Brown/Black
+STR_REFIT_KASHIMA		: {WHITE}Kashima Railway{BLACK} Black/White
 
 
-STR_REFIT_EXP1			: Experimental Livery 1
-STR_REFIT_EXP2			: Experimental Livery 2
-STR_REFIT_EXP3			: Experimental Livery 3
 
-STR_REFIT_DE10_1112		: DE10 1112 Brown/Yellow
-STR_REFIT_DE10_1148		: DE10 1148 Light Blue/White
-STR_REFIT_DE10_1152		: DE10 1152 Blue/Orange
-STR_REFIT_DE10_1660		: DE10 1660 Green/Gold
-STR_REFIT_DE10_KYUSHU		: DE10 JR Kyushu Black
+STR_REFIT_ED61_CC		: {SILVER}ED61 {GREEN}{GREEN}Company Colour{BLACK}
+STR_REFIT_ED61_BROWN	: {SILVER}ED61 {WHITE}JNR {BLACK}Brown
+STR_REFIT_ED61_BLUE		: {SILVER}ED61 {WHITE}JNR {BLACK}Blue
+STR_REFIT_ED62_CC		: {SILVER}ED62 {GREEN}{GREEN}Company Colour{BLACK}
+STR_REFIT_ED62_BROWN	: {SILVER}ED62 {WHITE}JNR {BLACK}Brown
+STR_REFIT_ED62_BLUE		: {SILVER}ED62 {WHITE}JNR {BLACK}Blue
+STR_REFIT_ED62_JRF		: {SILVER}ED62 {WHITE}JR Freight
+STR_REFIT_ED62_HAMA		: {SILVER}ED62 {WHITE}JR Freight {BLACK}"Hamamatsu Depot"
 
-STR_REFIT_ED61_CC		: ED61 Company Colour
-STR_REFIT_ED61_BROWN	: ED61 JNR Classic Brown
-STR_REFIT_ED61_BLUE		: ED61 JNR Standard Blue
-STR_REFIT_ED62_CC		: ED62 Company Colour
-STR_REFIT_ED62_BROWN	: ED62 JNR Classic Brown
-STR_REFIT_ED62_BLUE		: ED62 JNR Standard Blue
-STR_REFIT_ED62_JRF		: ED62 JR Freight
-STR_REFIT_ED62_HAMA		: ED62 "Hamamatsu Depot"
+STR_REFIT_ED75_GOLD	: {SILVER}ED75 {WHITE}JR East Red/Gold "Orient Saloon"
+STR_REFIT_ED75_M1	: {SILVER}ED75 {WHITE}JR Freight Red with Stripe
+STR_REFIT_ED75_M2	: {SILVER}ED75 {WHITE}JR Freight "Panda"
+STR_REFIT_ED75_M3	: {SILVER}ED75 {WHITE}JR Freight Red and White
 
-STR_REFIT_ED75_GOLD	: ED75 711 "Orient Saloon"
-STR_REFIT_ED75_M1	: ED75 JR Freight Red with Stripe
-STR_REFIT_ED75_M2	: ED75 JR Freight "Panda"
-STR_REFIT_ED75_M3	: ED75 JR Freight Red and White
+STR_REFIT_ED79_CC	: {SILVER}ED79 {BLACK}{GREEN}Company Colour{BLACK} {GOLD}(110km/h)
+STR_REFIT_ED79_RED	: {SILVER}ED79 {WHITE}JNR {BLACK} Red {GOLD}(110km/h)
+STR_REFIT_ED79_JRF	: {SILVER}ED79 {WHITE}JR Freight {BLACK}Blue/White {GOLD}(110km/h)
 
-STR_REFIT_ED79_CC	: ED79 Company Colour {GOLD}(110km/h)
-STR_REFIT_ED79_RED	: ED79 Classic Red {GOLD}(110km/h)
-STR_REFIT_ED79_JRF	: ED79 JR Freight  {GOLD}(110km/h)
+STR_REFIT_EF58_61	: {WHITE}JNR {BLACK}Imperial Train
+STR_REFIT_EF58_BLUE	: {WHITE}JNR {BLACK}Express Blue/Cream
+STR_REFIT_EF58_EXP1	: {WHITE}JNR {BLACK}Experimental Blue/Yellow
+STR_REFIT_EF58_EXP2	: {WHITE}JNR {BLACK}Experimental Blue/Orange
+STR_REFIT_EF58_EXP3	: {WHITE}JNR {BLACK}Experimental Green
 
-STR_REFIT_EF58_61	: Imperial Train
-STR_REFIT_EF58_BLUE	: JNR Express Blue/Cream
+STR_REFIT_EF60_NEW		: {SILVER}EF60{WHITE} JNR{BLACK} Blue {GOLD}(New Shape)
+STR_REFIT_EF60_AMERICAN	: {SILVER}EF60{WHITE} JR East{BLACK} "American Train"
+STR_REFIT_EF60_YASURAGI	: {SILVER}EF60{WHITE} JR East{BLACK} "Yasuragi"
 
-STR_REFIT_EF60_NEW	: EF60 JNR Standard Blue (New Shape)
-STR_REFIT_EF60_AMERICAN	: EF60 "American Train"
-STR_REFIT_EF60_YASURAGI	: EF60 "Yasuragi"
+STR_REFIT_EF64_1_BROWN	: {SILVER}EF64-1000{WHITE} JNR{BLACK} Brown
+STR_REFIT_EF64_1_BLUE	: {SILVER}EF64-1000{WHITE} JNR{BLACK} Blue
+STR_REFIT_EF64_1_REFIT	: {SILVER}EF64-1000{WHITE} JR Freight{BLACK} Refurbished
+STR_REFIT_EF64_1_STRIPE	: {SILVER}EF64-1000{WHITE} JR Freight{BLACK} Stripe
+STR_REFIT_EF64_1_SLOGO	: {SILVER}EF64-1000{WHITE} JR Freight{BLACK} Stripe with Logo
+STR_REFIT_EF64_1_LLOGO	: {SILVER}EF64-1000{WHITE} JR Freight{BLACK} Large Logo
 
-STR_REFIT_EF64_1_BROWN	: EF64-1000 Classic Brown
-STR_REFIT_EF64_1_BLUE	: EF64-1000 JNR Standard Blue
-STR_REFIT_EF64_1_REFIT	: EF64-1000 JR Freight Refurbished
-STR_REFIT_EF64_1_STRIPE	: EF64-1000 JR Freight Stripe
-STR_REFIT_EF64_1_SLOGO	: EF64-1000 JR Freight Stripe with Logo
-STR_REFIT_EF64_1_LLOGO	: EF64-1000 JR Freight Large Logo
-
-
+STR_REFIT_DD51_EXP1	: {WHITE}JR Freight {BLACK}Experimental Blue/Red
+STR_REFIT_DD51_EXP2	: {WHITE}JR Freight {BLACK}Experimental Blue/White
+STR_REFIT_DD51_EXP3	: {WHITE}JR Freight {BLACK}Experimental Blue/Cream
 
 
 STR_REFIT_EF81_450		: EF81-450 Modern Headlights
@@ -261,14 +269,14 @@ STR_REFIT_EF67			: EF67 Banker
 
 STR_REFIT_EF210_300		: EF210-300 Banker
 
-STR_REFIT_EF510_RED		: JR Freight "Red Thunder"
-STR_REFIT_EF510_300		: EF510-300 JR Freight Silver
+STR_REFIT_EF510_RED		: {WHITE}JR Freight {GOLD}"Red Thunder"
+STR_REFIT_EF510_300		: {SILVER}EF510-300 {WHITE}JR Freight {BLACK}Silver
 
-STR_REFIT_DF200_NEW		: JR Freight "Red Bear"
-STR_REFIT_DF200_SS		: JR Kyushu "Seven Stars"
+STR_REFIT_DF200_NEW		: {WHITE}JR Freight {GOLD}"Red Bear"
+STR_REFIT_DF200_SS		: {WHITE}JR Kyushu {GOLD}"Seven Stars"
 
-STR_REFIT_EH10		: EH10 Standard Black
-STR_REFIT_EH10_HS	: EH10 High Speed Brown {GOLD}(110km/h)
+STR_REFIT_EH10		: EH10 JNR Black
+STR_REFIT_EH10_HS	: EH10 JNR Experimental Brown {GOLD}(110km/h)
 
 STR_REFIT_EH500_1	: EH500 Early version (Low Headlights)
 STR_REFIT_EH500_2	: EH500 Early version "Kintaro Eco-Power"
