--- a/lang/english.lng
+++ b/lang/english.lng
@@ -284,15 +284,15 @@ STR_REFIT_EH500_3	: EH500 Late Version "Kintaro Eco-Power"
 STR_REFIT_EH500_4	: EH500 Late Version, No Logo 
 
 
-STR_REFIT_MEITETSU_BLACK	: Meitetsu Original Black
-STR_REFIT_MEITETSU_BLUE		: Meitetsu Refurbished Blue
+STR_REFIT_MEITETSU_BLACK	: {WHITE}Aichi Railway {BLACK}Black
+STR_REFIT_MEITETSU_BLUE		: {WHITE}Meitetsu {BLACK}Blue
 
 
 STR_REFIT_WAKI_STRIPE	: Orange Stripe "Express Service"
 STR_REFIT_WAKI_GREENSTRIPE : Brown with Green Stripe
 
-STR_REFIT_KU_NISSAN			: JRF Red/White/Blue "Nissan"
-STR_REFIT_KU_REDBLUE		: JRF Red/Blue
+STR_REFIT_KU_NISSAN			: {WHITE}JR Freight {BLACK}Red/White/Blue "Nissan"
+STR_REFIT_KU_REDBLUE		: {WHITE}JR Freight {BLACK}Red/Blue
 
 STR_REFIT_DMT_PROTO		: DMT Prototype
 STR_REFIT_DMT_SAGAWA	: Sagawa
