--- a/lang/english.lng
+++ b/lang/english.lng
@@ -227,9 +227,10 @@ STR_REFIT_ED75_M1	: {SILVER}ED75 {WHITE}JR Freight Red with Stripe
 STR_REFIT_ED75_M2	: {SILVER}ED75 {WHITE}JR Freight "Panda"
 STR_REFIT_ED75_M3	: {SILVER}ED75 {WHITE}JR Freight Red and White
 
-STR_REFIT_ED79_CC	: {SILVER}ED79 {BLACK}{GREEN}Company Colour{BLACK} {GOLD}(110km/h)
-STR_REFIT_ED79_RED	: {SILVER}ED79 {WHITE}JNR {BLACK} Red {GOLD}(110km/h)
-STR_REFIT_ED79_JRF	: {SILVER}ED79 {WHITE}JR Freight {BLACK}Blue/White {GOLD}(110km/h)
+STR_REFIT_ED79_CC			: {SILVER}ED79 {BLACK}{GREEN}Company Colour{BLACK} {GOLD}(110km/h)
+STR_REFIT_ED79_RED			: {SILVER}ED79 {WHITE}JR Freight {BLACK}Red {GOLD}(110km/h)
+STR_REFIT_ED79_SINGLEARM	: {SILVER}ED79 {WHITE}JR Freight {BLACK}Red with Single Arm Pantograph {GOLD}(110km/h)
+STR_REFIT_ED79_JRF			: {SILVER}ED79 {WHITE}JR Freight {BLACK}Blue/White {GOLD}(110km/h)
 
 STR_REFIT_EF58_61	: {WHITE}JNR {BLACK}Imperial Train
 STR_REFIT_EF58_BLUE	: {WHITE}JNR {BLACK}Express Blue/Cream
