Mail van tweaks

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -58,7 +58,7 @@ STR_NAME_PASSENGER_12	:12 Series Passenger Coach
 STR_NAME_PASSENGER_24	:24 Series Passenger Coach
 STR_NAME_PASSENGER_50	:50 Series Passenger Coach
 
-STR_NAME_SUYU_10		:SUYU 10 Mail Van
+STR_NAME_OYU_10		:OYU 10 Mail Van
 STR_NAME_MAIL_15		:SUYU 15 Mail Van
 STR_NAME_MAIL_50		:MANI 50 Express Van
 STR_NAME_MAIL_44		:MANI 44 Express Van
@@ -154,6 +154,7 @@ STR_REFIT_JGR_BLACK	: {WHITE}JGR{BLACK} Black
 STR_REFIT_JNR_BROWN	    : {WHITE}JNR{BLACK} Brown
 STR_REFIT_JNR_YELLOW	: {WHITE}JNR{BLACK} Brown/Yellow
 STR_REFIT_RED		: {WHITE}JNR{BLACK} Red
+STR_REFIT_PINK		: {WHITE}JNR{BLACK} Rose Pink
 STR_REFIT_BLUE		: {WHITE}JNR{BLACK} Blue
 STR_REFIT_BLACK		: {WHITE}JNR{BLACK} Black
 STR_REFIT_GREEN		: {WHITE}JNR{BLACK} Light Green
@@ -175,6 +176,7 @@ STR_REFIT_EXP		: {WHITE}JR Freight{BLACK} Experimental
 STR_REFIT_PROTOTYPE	: {WHITE}JR Freight{BLACK} Prototype
 STR_REFIT_OLDRED	: {WHITE}JNR{BLACK} Classic Red
 STR_REFIT_OLDSTRIPE	: {WHITE}JNR{BLACK} Classic Red with Stripe
+STR_REFIT_BLUE_AC	: {WHITE}JNR{BLACK} Blue with A/C
 
 STR_REFIT_RAINBOW		: {WHITE}JR East{BLACK} {GOLD}"Super Express Rainbow"{BLACK}
 STR_REFIT_TWILIGHT	: {WHITE}JR West{BLACK} {GOLD}"Twilight Express"{BLACK}
