--- a/lang/english.lng
+++ b/lang/english.lng
@@ -173,6 +173,7 @@ STR_REFIT_SILVER	: {WHITE}JR Freight{BLACK} Silver
 STR_REFIT_JRF_YELLOW	: {WHITE}JR Freight{BLACK} Red/Yellow
 STR_REFIT_JRF_PINK		: {WHITE}JR Freight{BLACK} Pink/Orange
 STR_REFIT_JRF_THICK		: {WHITE}JR Freight{BLACK} Red/White/Grey
+STR_REFIT_JRF_REDBLUE	: {WHITE}JR Freight{BLACK} Red/Blue
 STR_REFIT_HOKBLUE	: {WHITE}JR Hokkaido{BLACK} {GOLD}"Hokutosei"{BLACK}
 STR_REFIT_HOKRED	: {WHITE}JR Freight{BLACK} Hokkaido
 STR_REFIT_EUROLINER	: {WHITE}JR Central{BLACK} {GOLD}"Euroliner"{BLACK}
