--- a/lang/english.lng
+++ b/lang/english.lng
@@ -58,12 +58,29 @@ STR_NAME_PASSENGER_12	:12 Series Passenger Coach
 STR_NAME_PASSENGER_24	:24 Series Passenger Coach
 STR_NAME_PASSENGER_50	:50 Series Passenger Coach
 
+STR_REFIT_PAX_OHN25		: {SILVER}OHANE 25{BLACK} Sleeper Coach
+STR_REFIT_PAX_ORN24		: {SILVER}ORONE 24{BLACK} Sleeper Coach
+STR_REFIT_PAX_OHNF25	: {SILVER}OHANEFU 25{BLACK} Lounge Coach
+STR_REFIT_PAX_KN24		: {SILVER}KANI 24{BLACK} Generator Van
+
+
+
 STR_NAME_OYU_10		:OYU 10 Mail Van
 STR_NAME_MAIL_15		:SUYU 15 Mail Van
 STR_NAME_MAIL_50		:MANI 50 Express Van
 STR_NAME_MAIL_44		:MANI 44 Express Van
 STR_NAME_MAIL_30		:MANI 30 Armoured Van
 STR_NAME_MAIL_8000		:SUNI 40 / SUYU 44 / WAKI 8000 Express Van
+
+STR_REFIT_SUNI_40		: {SILVER}SUNI 40{BLACK} Luggage Van
+STR_REFIT_SUYU_44		: {SILVER}SUYU 44{BLACK} Mail Van
+STR_REFIT_WAKI_8000		: {SILVER}WAKI 8000{BLACK} Express Box Van
+STR_REFIT_SUNI_41		: {SILVER}SUNI 41{BLACK} Mail Van with Conductor's Room
+STR_REFIT_WASAFU_8000	: {SILVER}WASAFU 8000{BLACK} Box Van with Conductor's Room (Silver)
+STR_REFIT_WASAFU_BLUE	: {SILVER}WASAFU 8000{BLACK} Box Van with Conductor's Room (Blue)
+
+
+
 
 STR_NAME_CAR_CARRIER	:Future Car Transporter
 STR_NAME_SUPPLY_CARRIER	:Old Vehicle Flatbed
@@ -87,12 +104,6 @@ STR_NAME_RE_1			:RE 1 Refrigerated Van
 STR_NAME_RESA_10000		:RESA 10000 Refrigerated Van
 STR_NAME_REMU_5000		:REMU 5000 Refrigerated Van
 
-STR_REFIT_SUNI_40		: {SILVER}SUNI 40{BLACK} Luggage Van
-STR_REFIT_SUYU_44		: {SILVER}SUYU 44{BLACK} Mail Van
-STR_REFIT_WAKI_8000		: {SILVER}WAKI 8000{BLACK} Express Box Van
-STR_REFIT_SUNI_41		: {SILVER}SUNI 41{BLACK} Mail Van with Conductor's Room
-STR_REFIT_WASAFU_8000	: {SILVER}WASAFU 8000{BLACK} Box Van with Conductor's Room (Silver)
-STR_REFIT_WASAFU_BLUE	: {SILVER}WASAFU 8000{BLACK} Box Van with Conductor's Room (Blue)
 
 STR_NAME_KU_5000		:KU 5000 Car Transporter
 STR_NAME_KOKI_71		:KOKI 71 Car Rack
@@ -129,7 +140,8 @@ STR_NAME_YO_8000		:YO 8000 Brake Van
 
 STR_REFIT_YEARDEP	: {GREEN}Year-Dependent{BLACK}
 STR_REFIT_CC		: {GREEN}Company Colour{BLACK}
-STR_REFIT_RANDOM	: Random
+STR_REFIT_RANDOM	: {GREEN}Random{BLACK}
+STR_REFIT_AUTOFORM	: {GREEN}Auto-Formation{BLACK}
 
 STR_REFIT_BROWN_OLD	    : {WHITE}JNR{BLACK} Standard Brown (Old Shape)
 STR_REFIT_BROWN_NEW	    : {WHITE}JNR{BLACK} Standard Brown (New Shape)
