TOMU, TORA rework and refit adjust

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -112,6 +112,7 @@ STR_NAME_KOKI_10000		:KOKI 10000 Container Carrier
 STR_NAME_CONTAINER		:KOKI 100 Container Carrier
 STR_NAME_ROADRAILER		:WA 100 Dual Mode Transport
 
+STR_NAME_TOMU_1			:TOMU 1 Open Wagon
 STR_NAME_TORA_5000		:TORA 5000 Open Wagon
 STR_NAME_TORA_90000		:TORA 90000 Open Wagon
 STR_NAME_TOKI_900		:TOKI 900 Open Wagon
